adding more exclusion logic, still doesn't exclude stuff tho. also cleaned up code, put most of the boilerplate into autoscraperutil

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 ff2019.txt
 results.csv
 __pycache__/AutotraderXHRTest.cpython-310.pyc
+*.csv
+*.json
+*.html
+*.json
+*.pyc
+*.pyc
+*.html
+*.json
