--- a/autoscraper_rust/.env
+++ b/autoscraper_rust/.env
@@ -1,4 +1,5 @@
-# Environment variables for AutoScraper Rust
+# Environment variables for autoscraper_rust
 
-# Path to the Google Cloud service account key file
+# Logging level (e.g., error, warn, info, debug, trace)
 GOOGLE_APPLICATION_CREDENTIALS=firebase_credentials.json
+RUST_LOG=autoscraper_rust=debug,tower_http=info
