--- a/autoscraper_rust/Cargo.toml
+++ b/autoscraper_rust/Cargo.toml
@@ -18,6 +18,7 @@ reqwest = { version = "0.12", features = ["json", "cookies"] }
 scraper = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+csv = "1.3" # Added for CSV writing
 cached = "0.52" # For LRU caching
 
 # Configuration
@@ -30,6 +31,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
 # Error Handling
 anyhow = "1.0"
+thiserror = "1.0" # Added for easier Error trait implementation
 
 # JWT Handling & Time
 jsonwebtoken = "9"
