--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ firebase-admin
 tabulate
 celery==5.4.0 # Added Celery
 redis==5.0.4 # Added Redis client
+waitress # Added Waitress WSGI Server (Windows compatible)
