Finalize kijijiscraper main concept

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ tabulate
 celery==5.4.0 # Added Celery
 redis==5.0.4 # Added Redis client
 waitress # Added Waitress WSGI Server (Windows compatible)
+httpx # Added for asynchronous HTTP requests
