adding testing of features

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ redis==5.0.4 # Added Redis client
 waitress # Added Waitress WSGI Server (Windows compatible)
 httpx # Added for asynchronous HTTP requests
 lxml # Added HTML/XML parser for BeautifulSoup
+selenium
+pytest
